--- a/public/index.html
+++ b/public/index.html
@@ -9,9 +9,9 @@
 <link href="https://fonts.googleapis.com/css2?family=Archivo+Black&family=DM+Sans:ital,wght@0,400;0,500;0,700;1,400;1,500&family=Caveat:wght@600&display=swap" rel="stylesheet">
 <style>
   :root {
-    --bg: #131313;
-    --surface: #1c1b1a;
-    --surface2: #242220;
+    --bg: #1c1917;
+    --surface: #252120;
+    --surface2: #2e2a28;
     --text: #d9d4ce;
     --text-muted: #8a8580;
     --accent: #c4453a;
@@ -25,7 +25,9 @@
   * { margin: 0; padding: 0; box-sizing: border-box; }
   html { scroll-behavior: smooth; }
   body {
-    background: var(--bg);
+    background: #1c1917;
+    background-image: radial-gradient(ellipse at 50% 0%, #231f1c 0%, #1c1917 50%, #17140f 100%);
+    background-attachment: fixed;
     color: var(--text);
     font-family: 'DM Sans', sans-serif;
     font-size: 18px;
@@ -36,7 +38,7 @@
   /* NOISE TEXTURE OVERLAY */
   body::before {
     content: ''; position: fixed; inset: 0; z-index: 9999;
-    pointer-events: none; opacity: 0.03;
+    pointer-events: none; opacity: 0.045;
     background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 256 256' xmlns='http://www.w3.org/2000/svg'%3E%3Cfilter id='n'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='0.9' numOctaves='4' stitchTiles='stitch'/%3E%3C/filter%3E%3Crect width='100%25' height='100%25' filter='url(%23n)'/%3E%3C/svg%3E");
     background-repeat: repeat; background-size: 256px 256px;
   }
@@ -109,7 +111,7 @@
   .home-hero {
     min-height: 80vh; display: flex; align-items: center; justify-content: center;
     text-align: center; padding: 120px 40px 60px; position: relative;
-    background: linear-gradient(170deg, #1a0000 0%, var(--bg) 40%, var(--bg) 60%, #1a0000 100%);
+    background: linear-gradient(170deg, #1a0f0a 0%, var(--bg) 35%, #1e1714 60%, #1a0f08 100%);
     overflow: hidden;
   }
   .home-hero::before {
@@ -277,7 +279,7 @@
   }
   .article-hero-overlay {
     position: absolute; inset: 0;
-    background: linear-gradient(to top, var(--bg) 0%, rgba(19,19,19,0.6) 35%, transparent 100%);
+    background: linear-gradient(to top, var(--bg) 0%, rgba(28,25,23,0.6) 35%, transparent 100%);
   }
   .article-hero-content {
     position: relative; z-index: 2; padding: 0 40px 60px; max-width: 900px;
