--- a/public/index.html
+++ b/public/index.html
@@ -9,15 +9,15 @@
 <link href="https://fonts.googleapis.com/css2?family=Archivo+Black&family=DM+Sans:ital,wght@0,400;0,500;0,700;1,400;1,500&family=Caveat:wght@600&display=swap" rel="stylesheet">
 <style>
   :root {
-    --bg: #1c1917;
-    --surface: #252120;
-    --surface2: #2e2a28;
-    --text: #d9d4ce;
-    --text-muted: #8a8580;
+    --bg: #26221f;
+    --surface: #302b28;
+    --surface2: #3a3432;
+    --text: #ddd8d2;
+    --text-muted: #928d87;
     --accent: #c4453a;
     --accent-glow: #d4534b;
     --yellow: #c9a456;
-    --border: #2a2725;
+    --border: #3d3835;
     --green: #7a9e82;
     --blue: #6a8fa8;
     --purple: #9a85b0;
@@ -25,8 +25,8 @@
   * { margin: 0; padding: 0; box-sizing: border-box; }
   html { scroll-behavior: smooth; }
   body {
-    background: #1c1917;
-    background-image: radial-gradient(ellipse at 50% 0%, #231f1c 0%, #1c1917 50%, #17140f 100%);
+    background: #26221f;
+    background-image: radial-gradient(ellipse at 50% 0%, #332d29 0%, #26221f 50%, #1e1a17 100%);
     background-attachment: fixed;
     color: var(--text);
     font-family: 'DM Sans', sans-serif;
@@ -70,7 +70,7 @@
   /* NAV */
   nav {
     position: fixed; top: 0; left: 0; right: 0; z-index: 100;
-    background: rgba(19,19,19,0.85); backdrop-filter: blur(20px);
+    background: rgba(38,34,31,0.85); backdrop-filter: blur(20px);
     border-bottom: 1px solid var(--border);
     padding: 16px 40px;
     display: flex; align-items: center; justify-content: space-between;
@@ -279,7 +279,7 @@
   }
   .article-hero-overlay {
     position: absolute; inset: 0;
-    background: linear-gradient(to top, var(--bg) 0%, rgba(28,25,23,0.6) 35%, transparent 100%);
+    background: linear-gradient(to top, var(--bg) 0%, rgba(38,34,31,0.6) 35%, transparent 100%);
   }
   .article-hero-content {
     position: relative; z-index: 2; padding: 0 40px 60px; max-width: 900px;
