--- a/public/index.html
+++ b/public/index.html
@@ -9,15 +9,15 @@
 <link href="https://fonts.googleapis.com/css2?family=Archivo+Black&family=DM+Sans:ital,wght@0,400;0,500;0,700;1,400;1,500&family=Caveat:wght@600&display=swap" rel="stylesheet">
 <style>
   :root {
-    --bg: #26221f;
-    --surface: #302b28;
-    --surface2: #3a3432;
-    --text: #ddd8d2;
-    --text-muted: #928d87;
+    --bg: #2c2724;
+    --surface: #38322f;
+    --surface2: #443d3a;
+    --text: #e0dbd5;
+    --text-muted: #968f89;
     --accent: #c4453a;
     --accent-glow: #d4534b;
     --yellow: #c9a456;
-    --border: #3d3835;
+    --border: #4a4340;
     --green: #7a9e82;
     --blue: #6a8fa8;
     --purple: #9a85b0;
@@ -25,8 +25,8 @@
   * { margin: 0; padding: 0; box-sizing: border-box; }
   html { scroll-behavior: smooth; }
   body {
-    background: #26221f;
-    background-image: radial-gradient(ellipse at 50% 0%, #332d29 0%, #26221f 50%, #1e1a17 100%);
+    background: #2c2724;
+    background-image: radial-gradient(ellipse at 50% 0%, #3a3430 0%, #2c2724 50%, #24201d 100%);
     background-attachment: fixed;
     color: var(--text);
     font-family: 'DM Sans', sans-serif;
@@ -70,7 +70,7 @@
   /* NAV */
   nav {
     position: fixed; top: 0; left: 0; right: 0; z-index: 100;
-    background: rgba(38,34,31,0.85); backdrop-filter: blur(20px);
+    background: rgba(44,39,36,0.85); backdrop-filter: blur(20px);
     border-bottom: 1px solid var(--border);
     padding: 16px 40px;
     display: flex; align-items: center; justify-content: space-between;
@@ -111,7 +111,7 @@
   .home-hero {
     min-height: 80vh; display: flex; align-items: center; justify-content: center;
     text-align: center; padding: 120px 40px 60px; position: relative;
-    background: linear-gradient(170deg, #1a0f0a 0%, var(--bg) 35%, #1e1714 60%, #1a0f08 100%);
+    background: linear-gradient(170deg, #2a1f1a 0%, var(--bg) 35%, #2e2520 60%, #2a1f18 100%);
     overflow: hidden;
   }
   .home-hero::before {
@@ -279,7 +279,7 @@
   }
   .article-hero-overlay {
     position: absolute; inset: 0;
-    background: linear-gradient(to top, var(--bg) 0%, rgba(38,34,31,0.6) 35%, transparent 100%);
+    background: linear-gradient(to top, var(--bg) 0%, rgba(44,39,36,0.6) 35%, transparent 100%);
   }
   .article-hero-content {
     position: relative; z-index: 2; padding: 0 40px 60px; max-width: 900px;
