--- a/public/index.html
+++ b/public/index.html
@@ -9,24 +9,24 @@
 <link href="https://fonts.googleapis.com/css2?family=Archivo+Black&family=DM+Sans:ital,wght@0,400;0,500;0,700;1,400;1,500&family=Caveat:wght@600&display=swap" rel="stylesheet">
 <style>
   :root {
-    --bg: #2c2724;
-    --surface: #38322f;
-    --surface2: #443d3a;
-    --text: #e0dbd5;
-    --text-muted: #968f89;
+    --bg: #f5f0eb;
+    --surface: #ffffff;
+    --surface2: #ebe6e1;
+    --text: #2c2724;
+    --text-muted: #7a7370;
     --accent: #c4453a;
-    --accent-glow: #d4534b;
-    --yellow: #c9a456;
-    --border: #4a4340;
-    --green: #7a9e82;
-    --blue: #6a8fa8;
-    --purple: #9a85b0;
+    --accent-glow: #a83830;
+    --yellow: #8b6914;
+    --border: #ddd5cd;
+    --green: #4a7a54;
+    --blue: #3d7a96;
+    --purple: #7a5f96;
   }
   * { margin: 0; padding: 0; box-sizing: border-box; }
   html { scroll-behavior: smooth; }
   body {
-    background: #2c2724;
-    background-image: radial-gradient(ellipse at 50% 0%, #3a3430 0%, #2c2724 50%, #24201d 100%);
+    background: #f5f0eb;
+    background-image: none;
     background-attachment: fixed;
     color: var(--text);
     font-family: 'DM Sans', sans-serif;
@@ -38,7 +38,7 @@
   /* NOISE TEXTURE OVERLAY */
   body::before {
     content: ''; position: fixed; inset: 0; z-index: 9999;
-    pointer-events: none; opacity: 0.045;
+    pointer-events: none; opacity: 0.025;
     background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 256 256' xmlns='http://www.w3.org/2000/svg'%3E%3Cfilter id='n'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='0.9' numOctaves='4' stitchTiles='stitch'/%3E%3C/filter%3E%3Crect width='100%25' height='100%25' filter='url(%23n)'/%3E%3C/svg%3E");
     background-repeat: repeat; background-size: 256px 256px;
   }
@@ -47,7 +47,7 @@
   .reading-progress {
     position: fixed; top: 0; left: 0; height: 3px; z-index: 200;
     background: var(--accent); width: 0%; transition: width 0.1s linear;
-    box-shadow: 0 0 10px var(--accent-glow);
+    box-shadow: 0 0 6px var(--accent-glow);
   }
 
   /* PAGE TRANSITIONS */
@@ -70,7 +70,7 @@
   /* NAV */
   nav {
     position: fixed; top: 0; left: 0; right: 0; z-index: 100;
-    background: rgba(44,39,36,0.85); backdrop-filter: blur(20px);
+    background: rgba(245,240,235,0.9); backdrop-filter: blur(20px);
     border-bottom: 1px solid var(--border);
     padding: 16px 40px;
     display: flex; align-items: center; justify-content: space-between;
@@ -111,7 +111,7 @@
   .home-hero {
     min-height: 80vh; display: flex; align-items: center; justify-content: center;
     text-align: center; padding: 120px 40px 60px; position: relative;
-    background: linear-gradient(170deg, #2a1f1a 0%, var(--bg) 35%, #2e2520 60%, #2a1f18 100%);
+    background: linear-gradient(170deg, #ede7e1 0%, var(--bg) 35%, #ece5de 60%, #e8e1da 100%);
     overflow: hidden;
   }
   .home-hero::before {
@@ -154,8 +154,8 @@
   .hero-logo {
     width: 180px; height: 180px; border-radius: 20px;
     object-fit: cover; margin-bottom: 32px;
-    box-shadow: 0 0 60px rgba(196,69,58,0.3), 0 20px 40px rgba(0,0,0,0.5);
-    border: 3px solid rgba(196,69,58,0.4);
+    box-shadow: 0 0 60px rgba(196,69,58,0.15), 0 20px 40px rgba(0,0,0,0.1);
+    border: 3px solid rgba(196,69,58,0.3);
     animation: heroLogoIn 1s ease-out 0.2s both;
     transition: transform 0.4s ease, box-shadow 0.4s ease;
   }
@@ -217,7 +217,8 @@
   .card.card-featured .excerpt { font-size: 16px; }
   .card {
     background: var(--surface); border: 1px solid var(--border);
-    overflow: hidden; cursor: pointer;
+    overflow: hidden; cursor: pointer; border-radius: 8px;
+    box-shadow: 0 2px 12px rgba(0,0,0,0.06);
     transition: all 0.4s cubic-bezier(0.25, 0.46, 0.45, 0.94);
     text-decoration: none; color: inherit; display: block;
     position: relative;
@@ -230,16 +231,16 @@
   .card:hover {
     border-color: var(--accent);
     transform: translateY(-8px) scale(1.01);
-    box-shadow: 0 20px 60px rgba(0,0,0,0.4), 0 0 30px rgba(196,69,58,0.1);
+    box-shadow: 0 20px 60px rgba(0,0,0,0.08), 0 0 30px rgba(196,69,58,0.05);
   }
   .card:hover::after { opacity: 1; }
   .card-img {
     width: 100%; height: 220px; object-fit: cover;
-    filter: brightness(0.6) saturate(0.8);
+    filter: brightness(0.85) saturate(0.9);
     transition: filter 0.5s ease, transform 0.5s ease;
   }
   .card:hover .card-img {
-    filter: brightness(0.75) saturate(1);
+    filter: brightness(0.95) saturate(1);
     transform: scale(1.05);
   }
   .card-img-wrap { overflow: hidden; }
@@ -279,7 +280,7 @@
   }
   .article-hero-overlay {
     position: absolute; inset: 0;
-    background: linear-gradient(to top, var(--bg) 0%, rgba(44,39,36,0.6) 35%, transparent 100%);
+    background: linear-gradient(to top, var(--bg) 0%, rgba(245,240,235,0.6) 35%, transparent 100%);
   }
   .article-hero-content {
     position: relative; z-index: 2; padding: 0 40px 60px; max-width: 900px;
@@ -317,7 +318,7 @@
   }
   .article-body h3 {
     font-family: 'Archivo Black', sans-serif; font-size: 24px;
-    text-transform: uppercase; color: #fff;
+    text-transform: uppercase; color: var(--text);
     margin: 56px 0 24px; padding-top: 40px; border-top: 2px solid var(--border);
     line-height: 1.2;
   }
@@ -345,7 +346,7 @@
   }
   .pullquote p {
     font-family: 'Archivo Black', sans-serif; font-size: 22px;
-    line-height: 1.4; color: #fff; text-transform: uppercase; margin: 0 !important;
+    line-height: 1.4; color: var(--text); text-transform: uppercase; margin: 0 !important;
     position: relative; z-index: 1;
   }
   .pullquote::after {
@@ -1410,7 +1411,7 @@
 <div id="page-submit" class="page">
   <a class="back-link" onclick="showPage('home')">← Back to stories</a>
   <div style="max-width:720px;margin:0 auto;padding:120px 24px 80px">
-    <h2 style="font-family:'Archivo Black',sans-serif;font-size:clamp(28px,4vw,48px);text-transform:uppercase;line-height:1.1;margin-bottom:12px;color:#fff">Got a Travel <span style="color:var(--accent)">Horror Story?</span></h2>
+    <h2 style="font-family:'Archivo Black',sans-serif;font-size:clamp(28px,4vw,48px);text-transform:uppercase;line-height:1.1;margin-bottom:12px;color:var(--text)">Got a Travel <span style="color:var(--accent)">Horror Story?</span></h2>
     <p style="color:var(--text-muted);font-size:18px;margin-bottom:48px;line-height:1.7">We want your worst. The hostel that should be condemned. The bus ride that broke you. The food that fought back. The scam you walked right into. If it went wrong, we want to hear about it.</p>
     <form style="display:flex;flex-direction:column;gap:24px" onsubmit="event.preventDefault();this.querySelector('button').textContent='Story Submitted! 🎉';this.querySelector('button').style.background='var(--green)'">
       <div>
