--- a/public/index.html
+++ b/public/index.html
@@ -109,73 +109,71 @@
 
   /* HOME HERO */
   .home-hero {
-    min-height: 80vh; display: flex; align-items: center; justify-content: center;
-    text-align: center; padding: 120px 40px 60px; position: relative;
-    background: linear-gradient(170deg, #ede7e1 0%, var(--bg) 35%, #ece5de 60%, #e8e1da 100%);
-    overflow: hidden;
+    height: 80vh; position: relative; overflow: hidden;
+    display: grid; grid-template-columns: 1fr 1fr; grid-template-rows: 1fr auto;
+    padding: 100px 40px 0;
+    background-color: #1a1714;
   }
-  .home-hero::before {
-    content: ''; position: absolute; top: -50%; left: -50%;
-    width: 200%; height: 200%;
-    background: radial-gradient(ellipse at 50% 50%, rgba(196,69,58,0.08) 0%, transparent 50%);
-    pointer-events: none;
-    animation: heroGlow 8s ease-in-out infinite alternate;
+  .home-hero .hero-bg {
+    position: absolute; inset: 0; z-index: 0;
+    background: url('https://images.unsplash.com/photo-1721826496448-6efab036ed96?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&w=1600&q=80') center/cover no-repeat;
   }
-  .home-hero::after {
-    content: ''; position: absolute; inset: 0; pointer-events: none;
-    background:
-      radial-gradient(circle at 20% 80%, rgba(196,69,58,0.04) 0%, transparent 40%),
-      radial-gradient(circle at 80% 20%, rgba(201,164,86,0.03) 0%, transparent 40%);
-    animation: heroGlow2 12s ease-in-out infinite alternate;
+  .home-hero .hero-bg::after {
+    content: ''; position: absolute; inset: 0;
+    background: linear-gradient(135deg, rgba(245,240,235,0.92) 0%, rgba(245,240,235,0.75) 50%, rgba(245,240,235,0.4) 100%);
   }
-  @keyframes heroGlow {
-    0% { transform: translate(0, 0) scale(1); }
-    100% { transform: translate(3%, -2%) scale(1.05); }
+  .home-hero .hero-content {
+    position: relative; z-index: 2;
+    display: flex; flex-direction: column; justify-content: center;
+    padding-right: 40px;
   }
-  @keyframes heroGlow2 {
-    0% { opacity: 0.5; }
-    100% { opacity: 1; }
+  .home-hero .hero-the {
+    font-family: 'DM Sans', sans-serif; font-size: 14px; font-weight: 500;
+    text-transform: uppercase; letter-spacing: 6px; color: var(--text-muted);
+    margin-bottom: 4px;
+    animation: heroTextIn 0.6s ease-out 0.2s both;
   }
-  /* Floating particles */
-  .hero-particles {
-    position: absolute; inset: 0; pointer-events: none; overflow: hidden;
+  .home-hero .hero-complaining {
+    font-family: 'Archivo Black', sans-serif;
+    font-size: clamp(48px, 8vw, 110px); text-transform: uppercase;
+    line-height: 0.85; color: var(--text);
+    margin-bottom: 0;
+    animation: heroTextIn 0.7s ease-out 0.35s both;
   }
-  .hero-particle {
-    position: absolute; width: 2px; height: 2px; border-radius: 50%;
-    background: rgba(196,69,58,0.3);
-    animation: particleFloat linear infinite;
+  .home-hero .hero-nomad {
+    font-family: 'Archivo Black', sans-serif;
+    font-size: clamp(48px, 8vw, 110px); text-transform: uppercase;
+    line-height: 0.85; color: var(--accent);
+    margin-left: clamp(40px, 5vw, 80px);
+    animation: heroAccentIn 0.7s ease-out 0.5s both;
   }
-  @keyframes particleFloat {
-    0% { transform: translateY(100vh) scale(0); opacity: 0; }
-    10% { opacity: 1; }
-    90% { opacity: 1; }
-    100% { transform: translateY(-20vh) scale(1); opacity: 0; }
+  .home-hero .hero-tagline {
+    font-family: 'Caveat', cursive; font-size: clamp(22px, 3vw, 32px);
+    color: var(--yellow); margin-top: 24px;
+    transform: rotate(-2deg); transform-origin: left center;
+    animation: heroTextIn 0.8s ease-out 0.7s both;
+  }
+  .home-hero .hero-sub {
+    color: var(--text-muted); max-width: 440px;
+    font-size: 15px; line-height: 1.7; margin-top: 20px;
+    animation: heroTextIn 0.8s ease-out 0.9s both;
+  }
+  .home-hero .hero-side {
+    position: relative; z-index: 2;
+    display: flex; align-items: center; justify-content: center;
   }
   .hero-logo {
-    width: 180px; height: 180px; border-radius: 20px;
-    object-fit: cover; margin-bottom: 32px;
-    box-shadow: 0 0 60px rgba(196,69,58,0.15), 0 20px 40px rgba(0,0,0,0.1);
-    border: 3px solid rgba(196,69,58,0.3);
-    animation: heroLogoIn 1s ease-out 0.2s both;
-    transition: transform 0.4s ease, box-shadow 0.4s ease;
+    width: 100px; height: 100px; border-radius: 14px;
+    object-fit: cover; position: absolute; right: 60px; top: 110px; z-index: 3;
+    box-shadow: 0 8px 32px rgba(0,0,0,0.18);
+    border: 3px solid rgba(196,69,58,0.4);
+    animation: heroLogoIn 0.8s ease-out 0.3s both;
+    transition: transform 0.4s ease;
   }
-  .hero-logo:hover {
-    transform: scale(1.05) rotate(-2deg);
-    box-shadow: 0 0 80px rgba(196,69,58,0.5), 0 24px 48px rgba(0,0,0,0.6);
-  }
+  .hero-logo:hover { transform: rotate(-4deg) scale(1.08); }
   @keyframes heroLogoIn {
-    from { opacity: 0; transform: scale(0.8) translateY(20px); }
-    to { opacity: 1; transform: scale(1) translateY(0); }
-  }
-  .home-hero h1 {
-    font-family: 'Archivo Black', sans-serif;
-    font-size: clamp(42px, 7vw, 90px); text-transform: uppercase;
-    line-height: 1; margin-bottom: 20px;
-    animation: heroTextIn 0.8s ease-out 0.5s both;
-  }
-  .home-hero h1 span {
-    color: var(--accent); display: block;
-    animation: heroAccentIn 0.8s ease-out 0.7s both;
+    from { opacity: 0; transform: scale(0.8) rotate(4deg); }
+    to { opacity: 1; transform: scale(1) rotate(0); }
   }
   @keyframes heroTextIn {
     from { opacity: 0; transform: translateY(30px); }
@@ -185,15 +183,27 @@
     from { opacity: 0; transform: translateY(20px) skewX(-3deg); }
     to { opacity: 1; transform: translateY(0) skewX(0); }
   }
-  .home-hero .tagline {
-    font-family: 'Caveat', cursive; font-size: 28px;
-    color: var(--yellow); margin-bottom: 40px;
-    animation: heroTextIn 0.8s ease-out 0.9s both;
-  }
-  .home-hero .sub {
-    color: var(--text-muted); max-width: 600px; margin: 0 auto;
-    font-size: 16px; line-height: 1.7;
+  .hero-stats {
+    grid-column: 1 / -1; position: relative; z-index: 2;
+    display: flex; align-items: center; justify-content: center; gap: 32px;
+    padding: 16px 0 20px;
+    font-size: 13px; font-weight: 500; letter-spacing: 1px; text-transform: uppercase;
+    color: var(--text-muted); border-top: 1px solid rgba(44,39,36,0.1);
     animation: heroTextIn 0.8s ease-out 1.1s both;
+  }
+  .hero-stats span { white-space: nowrap; }
+  .hero-stats .dot { color: var(--accent); font-size: 8px; }
+  .hero-scroll {
+    position: absolute; bottom: 20px; left: 50%; transform: translateX(-50%);
+    z-index: 3; display: flex; flex-direction: column; align-items: center;
+    gap: 6px; color: var(--text-muted); font-size: 11px; letter-spacing: 2px;
+    text-transform: uppercase; animation: heroBounce 2s ease-in-out infinite;
+    cursor: pointer; text-decoration: none;
+  }
+  .hero-scroll svg { width: 20px; height: 20px; stroke: var(--text-muted); }
+  @keyframes heroBounce {
+    0%, 100% { transform: translateX(-50%) translateY(0); }
+    50% { transform: translateX(-50%) translateY(6px); }
   }
 
   /* ARTICLE GRID */
@@ -445,7 +455,12 @@
   @media (max-width: 768px) {
     nav { padding: 12px 20px; }
     .nav-links { display: none; }
-    .home-hero { padding: 100px 20px 40px; }
+    .home-hero { grid-template-columns: 1fr; padding: 100px 20px 0; height: auto; min-height: 80vh; }
+    .home-hero .hero-content { padding-right: 0; }
+    .home-hero .hero-nomad { margin-left: 20px; }
+    .hero-logo { right: 20px; top: 90px; width: 70px; height: 70px; }
+    .hero-side { display: none; }
+    .hero-stats { flex-wrap: wrap; justify-content: center; gap: 12px; font-size: 11px; }
     .section-title, .article-grid { padding-left: 20px; padding-right: 20px; }
     .article-grid { grid-template-columns: 1fr; }
     .card.card-featured { grid-column: span 1; display: block; }
@@ -482,16 +497,25 @@
 <div id="page-home" class="page active">
 
   <div class="home-hero">
-    <div class="hero-particles" id="heroParticles"></div>
-    <div>
-      <img src="/logo.jpg" alt="The Complaining Nomad" class="hero-logo">
-      <h1>The <span>Complaining</span> Nomad</h1>
-      <p class="tagline">Travel is beautiful. This blog is about the other times.</p>
-      <p class="sub">Real travellers. Raw stories. The stuff nobody posts on Instagram. Bad hostels, nightmare buses, food poisoning, scams, and places that just plain sucked.</p>
+    <div class="hero-bg"></div>
+    <img src="/logo.jpg" alt="The Complaining Nomad" class="hero-logo">
+    <div class="hero-content">
+      <div class="hero-the">The</div>
+      <div class="hero-complaining">Complaining</div>
+      <div class="hero-nomad">Nomad</div>
+      <p class="hero-tagline">Travel is beautiful. This blog is about the other times.</p>
+      <p class="hero-sub">Real travellers. Raw stories. The stuff nobody posts on Instagram. Bad hostels, nightmare buses, food poisoning, scams, and places that just plain sucked.</p>
     </div>
+    <div class="hero-side"></div>
+    <div class="hero-stats">
+      <span>14 disasters documented</span><span class="dot">●</span>
+      <span>5 countries ruined</span><span class="dot">●</span>
+      <span>0 regrets (many regrets)</span>
+    </div>
+    <a href="#latest" class="hero-scroll">scroll<svg viewBox="0 0 24 24" fill="none" stroke-width="2"><path d="M12 5v14M5 12l7 7 7-7"/></svg></a>
   </div>
 
-  <div class="section-title">Latest Stories</div>
+  <div class="section-title" id="latest">Latest Stories</div>
 
   <div id="category-header"><h2 id="cat-title"></h2><p id="cat-blurb"></p></div>
 
@@ -1609,25 +1633,11 @@ window.addEventListener('scroll', () => {
   }
 });
 
-// Hero particles
-function createParticles() {
-  const container = document.getElementById('heroParticles');
-  if (!container) return;
-  for (let i = 0; i < 20; i++) {
-    const p = document.createElement('div');
-    p.className = 'hero-particle';
-    p.style.left = Math.random() * 100 + '%';
-    p.style.width = p.style.height = (Math.random() * 3 + 1) + 'px';
-    p.style.animationDuration = (Math.random() * 15 + 10) + 's';
-    p.style.animationDelay = (Math.random() * 10) + 's';
-    p.style.opacity = Math.random() * 0.5;
-    container.appendChild(p);
-  }
-}
+// Hero particles removed — invisible on light theme
 
 // Init
 document.addEventListener('DOMContentLoaded', () => {
-  createParticles();
+  // particles removed
   initScrollReveal();
   document.getElementById('readingProgress').style.display = 'none';
 });
