--- a/public/index.html
+++ b/public/index.html
@@ -9,15 +9,15 @@
 <link href="https://fonts.googleapis.com/css2?family=Archivo+Black&family=DM+Sans:ital,wght@0,400;0,500;0,700;1,400;1,500&family=Caveat:wght@600&display=swap" rel="stylesheet">
 <style>
   :root {
-    --bg: #f5f0eb;
+    --bg: #fafaf8;
     --surface: #ffffff;
-    --surface2: #ebe6e1;
+    --surface2: #f3f3f0;
     --text: #2c2724;
     --text-muted: #7a7370;
     --accent: #c4453a;
     --accent-glow: #a83830;
     --yellow: #8b6914;
-    --border: #ddd5cd;
+    --border: #e5e7eb;
     --green: #4a7a54;
     --blue: #3d7a96;
     --purple: #7a5f96;
@@ -25,7 +25,7 @@
   * { margin: 0; padding: 0; box-sizing: border-box; }
   html { scroll-behavior: smooth; }
   body {
-    background: #f5f0eb;
+    background: #fafaf8;
     background-image: none;
     background-attachment: fixed;
     color: var(--text);
@@ -70,8 +70,8 @@
   /* NAV */
   nav {
     position: fixed; top: 0; left: 0; right: 0; z-index: 100;
-    background: rgba(245,240,235,0.9); backdrop-filter: blur(20px);
-    border-bottom: 1px solid var(--border);
+    background: rgba(26,26,26,0.95); backdrop-filter: blur(20px);
+    border-bottom: 1px solid rgba(255,255,255,0.08);
     padding: 16px 40px;
     display: flex; align-items: center; justify-content: space-between;
   }
@@ -82,12 +82,12 @@
   .logo img { height: 40px; width: 40px; border-radius: 6px; object-fit: cover; }
   .logo-text {
     font-family: 'Archivo Black', sans-serif; font-size: 18px;
-    text-transform: uppercase; letter-spacing: 2px; color: var(--text);
+    text-transform: uppercase; letter-spacing: 2px; color: #f0f0f0;
   }
   .logo-text span { color: var(--accent); }
   .nav-links { display: flex; gap: 32px; list-style: none; }
   .nav-links a {
-    color: var(--text-muted); text-decoration: none; font-size: 13px;
+    color: rgba(255,255,255,0.6); text-decoration: none; font-size: 13px;
     font-weight: 500; text-transform: uppercase; letter-spacing: 1.5px;
     transition: color 0.2s;
   }
@@ -112,57 +112,51 @@
     position: relative; overflow: hidden;
     display: flex; flex-direction: column; align-items: center; justify-content: center;
     padding: 120px 40px 60px; min-height: 90vh;
-    background: radial-gradient(ellipse 60% 50% at 50% 38%, rgba(196,69,58,0.07) 0%, transparent 70%),
-                linear-gradient(180deg, #f5f0eb 0%, #efe8e0 100%);
+    background: #1a1a1a;
   }
   .home-hero::before {
     content: ''; position: absolute; inset: 0; z-index: 0;
     background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 256 256' xmlns='http://www.w3.org/2000/svg'%3E%3Cfilter id='noise'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='0.85' numOctaves='4' stitchTiles='stitch'/%3E%3C/filter%3E%3Crect width='100%25' height='100%25' filter='url(%23noise)'/%3E%3C/svg%3E");
-    opacity: 0.03; pointer-events: none;
+    opacity: 0.04; pointer-events: none;
+  }
+  .home-hero::after {
+    content: ''; position: absolute; top: 15%; left: 50%; transform: translateX(-50%);
+    width: 500px; height: 500px; z-index: 0;
+    background: radial-gradient(circle, rgba(196,69,58,0.15) 0%, transparent 70%);
+    pointer-events: none;
   }
   .home-hero .hero-logo-wrap {
     position: relative; z-index: 2; margin-bottom: 32px;
     animation: heroLogoIn 0.8s ease-out 0.2s both;
   }
   .hero-logo {
-    width: 280px; height: 280px; border-radius: 28px;
+    width: 220px; height: 220px; border-radius: 24px;
     object-fit: cover;
-    box-shadow: 0 0 80px rgba(196,69,58,0.25), 0 16px 48px rgba(0,0,0,0.15);
-    border: 4px solid rgba(196,69,58,0.3);
-    transition: transform 0.4s ease;
+    box-shadow: 0 8px 40px rgba(0,0,0,0.4);
+    border: none;
+    transition: transform 0.2s ease;
   }
-  .hero-logo:hover { transform: scale(1.04) rotate(-2deg); }
+  .hero-logo:hover { transform: scale(1.03); }
   .home-hero .hero-content {
     position: relative; z-index: 2;
     display: flex; flex-direction: column; align-items: center;
     text-align: center;
   }
-  .home-hero .hero-the {
-    font-family: 'DM Sans', sans-serif; font-size: 14px; font-weight: 500;
-    text-transform: uppercase; letter-spacing: 6px; color: var(--text-muted);
-    margin-bottom: 4px;
-    animation: heroTextIn 0.6s ease-out 0.4s both;
-  }
-  .home-hero .hero-complaining {
+  .home-hero .hero-title {
     font-family: 'Archivo Black', sans-serif;
-    font-size: clamp(36px, 7vw, 80px); text-transform: uppercase;
-    line-height: 0.9; color: var(--text);
+    font-size: clamp(32px, 5vw, 56px);
+    line-height: 1.1; color: #f0f0f0;
     margin-bottom: 0;
     animation: heroTextIn 0.7s ease-out 0.5s both;
   }
-  .home-hero .hero-nomad {
-    font-family: 'Archivo Black', sans-serif;
-    font-size: clamp(36px, 7vw, 80px); text-transform: uppercase;
-    line-height: 0.9; color: var(--accent);
-    animation: heroAccentIn 0.7s ease-out 0.65s both;
-  }
+  .home-hero .hero-title .hl { color: var(--accent); }
   .home-hero .hero-tagline {
-    font-family: 'Caveat', cursive; font-size: clamp(22px, 3vw, 32px);
-    color: var(--yellow); margin-top: 20px;
+    font-family: 'Caveat', cursive; font-size: clamp(22px, 3vw, 30px);
+    color: rgba(255,255,255,0.5); margin-top: 16px;
     animation: heroTextIn 0.8s ease-out 0.8s both;
   }
   .home-hero .hero-sub {
-    color: var(--text-muted); max-width: 500px;
+    color: rgba(255,255,255,0.4); max-width: 500px;
     font-size: 15px; line-height: 1.7; margin-top: 16px;
     animation: heroTextIn 0.8s ease-out 0.95s both;
   }
@@ -180,25 +174,33 @@
   }
   .hero-stats {
     position: relative; z-index: 2;
-    display: flex; align-items: center; justify-content: center; gap: 32px;
+    display: flex; align-items: center; justify-content: center; gap: 0;
     padding: 24px 0 0; margin-top: 28px;
     font-size: 13px; font-weight: 500; letter-spacing: 1px; text-transform: uppercase;
-    color: var(--text-muted); border-top: 1px solid rgba(44,39,36,0.1);
+    color: rgba(255,255,255,0.45); border-top: 1px solid rgba(255,255,255,0.08);
     animation: heroTextIn 0.8s ease-out 1.1s both;
   }
   .hero-stats span { white-space: nowrap; }
-  .hero-stats .dot { color: var(--accent); font-size: 8px; }
+  .hero-stats .stat-divider { width: 1px; height: 16px; background: rgba(255,255,255,0.15); margin: 0 24px; }
   .hero-scroll {
     position: absolute; bottom: 20px; left: 50%; transform: translateX(-50%);
     z-index: 3; display: flex; flex-direction: column; align-items: center;
-    gap: 6px; color: var(--text-muted); font-size: 11px; letter-spacing: 2px;
+    gap: 6px; color: rgba(255,255,255,0.3); font-size: 11px; letter-spacing: 2px;
     text-transform: uppercase; animation: heroBounce 2s ease-in-out infinite;
     cursor: pointer; text-decoration: none;
   }
-  .hero-scroll svg { width: 20px; height: 20px; stroke: var(--text-muted); }
+  .hero-scroll svg { width: 20px; height: 20px; stroke: rgba(255,255,255,0.3); }
   @keyframes heroBounce {
     0%, 100% { transform: translateX(-50%) translateY(0); }
     50% { transform: translateX(-50%) translateY(6px); }
+  }
+
+  /* HERO TO BODY TRANSITION */
+  .home-hero + .section-title { position: relative; }
+  .home-hero + .section-title::before {
+    content: ''; position: absolute; top: -80px; left: 0; right: 0; height: 80px;
+    background: linear-gradient(180deg, #1a1a1a 0%, #fafaf8 100%);
+    pointer-events: none;
   }
 
   /* ARTICLE GRID */
@@ -222,23 +224,16 @@
   .card.card-featured .excerpt { font-size: 16px; }
   .card {
     background: var(--surface); border: 1px solid var(--border);
-    overflow: hidden; cursor: pointer; border-radius: 8px;
-    box-shadow: 0 2px 12px rgba(0,0,0,0.06);
-    transition: all 0.4s cubic-bezier(0.25, 0.46, 0.45, 0.94);
+    overflow: hidden; cursor: pointer; border-radius: 12px;
+    box-shadow: 0 1px 3px rgba(0,0,0,0.1);
+    transition: transform 0.2s ease, box-shadow 0.2s ease;
     text-decoration: none; color: inherit; display: block;
     position: relative;
   }
-  .card::after {
-    content: ''; position: absolute; inset: 0; opacity: 0;
-    background: linear-gradient(135deg, rgba(196,69,58,0.05) 0%, transparent 60%);
-    transition: opacity 0.4s ease;
-  }
   .card:hover {
-    border-color: var(--accent);
-    transform: translateY(-8px) scale(1.01);
-    box-shadow: 0 20px 60px rgba(0,0,0,0.08), 0 0 30px rgba(196,69,58,0.05);
+    transform: translateY(-4px);
+    box-shadow: 0 12px 32px rgba(0,0,0,0.12);
   }
-  .card:hover::after { opacity: 1; }
   .card-img {
     width: 100%; height: 220px; object-fit: cover;
     filter: brightness(0.85) saturate(0.9);
@@ -275,8 +270,8 @@
   .worst-section .section-heading { font-family:'Archivo Black',sans-serif; font-size:14px; text-transform:uppercase; letter-spacing:4px; color:var(--text-muted); margin-bottom:8px; }
   .worst-section .section-sub { color:var(--text-muted); font-size:15px; font-style:italic; margin-bottom:32px; }
   .worst-grid { display:flex; flex-direction:column; gap:20px; }
-  .worst-card { display:grid; grid-template-columns: 280px 1fr; background:var(--surface2); border:1px solid var(--border); border-radius:8px; overflow:hidden; cursor:pointer; text-decoration:none; color:inherit; transition: transform 0.3s, box-shadow 0.3s; }
-  .worst-card:hover { transform:translateY(-4px); box-shadow:0 12px 40px rgba(0,0,0,0.08); }
+  .worst-card { display:grid; grid-template-columns: 280px 1fr; background:var(--surface); border:1px solid var(--border); border-radius:12px; overflow:hidden; cursor:pointer; text-decoration:none; color:inherit; transition: transform 0.2s ease, box-shadow 0.2s ease; }
+  .worst-card:hover { transform:translateY(-4px); box-shadow:0 12px 32px rgba(0,0,0,0.12); }
   .worst-card img { width:100%; height:100%; min-height:180px; object-fit:cover; }
   .worst-card .worst-body { padding:28px; display:flex; flex-direction:column; justify-content:center; }
   .worst-card h3 { font-family:'Archivo Black',sans-serif; font-size:18px; text-transform:uppercase; line-height:1.2; margin-bottom:8px; }
@@ -288,7 +283,7 @@
     .worst-card img { height: 200px; min-height: auto; }
     #category-header { padding: 20px 20px 0; }
   }
-  .card-body { padding: 28px; position: relative; z-index: 1; }
+  .card-body { padding: 32px; position: relative; z-index: 1; }
   .card-badge {
     display: inline-block; font-family: 'Archivo Black', sans-serif;
     font-size: 10px; text-transform: uppercase; letter-spacing: 3px;
@@ -324,7 +319,7 @@
   }
   .article-hero-overlay {
     position: absolute; inset: 0;
-    background: linear-gradient(to top, var(--bg) 0%, rgba(245,240,235,0.6) 35%, transparent 100%);
+    background: linear-gradient(to top, var(--bg) 0%, rgba(250,250,248,0.6) 35%, transparent 100%);
   }
   .article-hero-content {
     position: relative; z-index: 2; padding: 0 40px 60px; max-width: 900px;
@@ -451,7 +446,7 @@
     nav { padding: 12px 20px; }
     .nav-links { display: none; }
     .home-hero { padding: 100px 20px 40px; min-height: auto; }
-    .hero-logo { width: 200px; height: 200px; border-radius: 20px; }
+    .hero-logo { width: 160px; height: 160px; border-radius: 18px; }
     .hero-stats { flex-wrap: wrap; justify-content: center; gap: 12px; font-size: 11px; }
     .section-title, .article-grid { padding-left: 20px; padding-right: 20px; }
     .article-grid { grid-template-columns: 1fr; }
@@ -493,16 +488,14 @@
       <img src="/logo.jpg" alt="The Complaining Nomad" class="hero-logo">
     </div>
     <div class="hero-content">
-      <div class="hero-the">The</div>
-      <div class="hero-complaining">Complaining</div>
-      <div class="hero-nomad">Nomad</div>
+      <div class="hero-title">The <span class="hl">Complaining</span> Nomad</div>
       <p class="hero-tagline">Travel is beautiful. This blog is about the other times.</p>
       <p class="hero-sub">Real travellers. Raw stories. The stuff nobody posts on Instagram. Bad hostels, nightmare buses, food poisoning, scams, and places that just plain sucked.</p>
     </div>
     <div class="hero-stats">
-      <span>14 disasters documented</span><span class="dot">●</span>
-      <span>5 countries survived</span><span class="dot">●</span>
-      <span>0 complaints resolved</span>
+      <span>14 Disasters</span><span class="stat-divider"></span>
+      <span>5 Countries</span><span class="stat-divider"></span>
+      <span>0 Complaints Resolved</span>
     </div>
     <a href="#latest" class="hero-scroll">scroll<svg viewBox="0 0 24 24" fill="none" stroke-width="2"><path d="M12 5v14M5 12l7 7 7-7"/></svg></a>
   </div>
